--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Buenard:b|Rokkitt:600" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
-    <nav>
-    </nav>
 </head>
 
 <body>
     <main>
         <section class="mast" id="name">
-            <figure class="mast__bg" style="background-image:url(img/nyc2.JPG); background-position: center"></figure>
+            <figure class="mast__bg" style="background-color:black"></figure>
             <img class="first" src="img/profile.jpg"/>
             <header class="mast__header  js-clippy">
                 <h5 class="mast__pretitle" id="uno">Computer Science Major at Columbia University</h5>
@@ -27,7 +25,7 @@
             </header>
         </section>
         <section class="mast" id="portfolio">
-            <figure class="mast__bg" style="background-image:url(img/stl.jpg); background-position: center"></figure>
+            <figure class="mast__bg" style="background-color:black"></figure>
             <div class="second">
                 <a href="https://github.com/rounakbera"><img src="img/github.png"/></a>
                 <a href="https://www.linkedin.com/in/rbera/"><img src="img/linkedin.png"/></a>
@@ -35,7 +33,7 @@
                 <a href="https://scholar.google.com/citations?user=nYRI6TwAAAAJ&hl=en"><img src="img/scholar.png"/></a>
             </div>
             <header class="mast__header  js-clippy">
-                <h5 class="mast__pretitle" id="dos">HTML/JSP, CSS, JS, Python, MATLAB, R, Photoshop, Indesign</h5>
+                <h5 class="mast__pretitle" id="dos">React.js, Java, JSP, Python, MATLAB, Photoshop, Indesign</h5>
                 <h2 class="mast__title">Portfolio</h2>
                 <div class="arrow">
                     <a href="#contact"><i class="fas fa-angle-down"></i></a>
@@ -43,7 +41,7 @@
             </header>
         </section>
         <section class="mast" id="contact">
-            <figure class="mast__bg" style="background-image:url(img/calcutta.jpg)"></figure>
+            <figure class="mast__bg" style="background-color:black"></figure>
             <header class="mast__header  js-clippy">
                 <h5 class="mast__pretitle" id="tres"><a href="mailto:rounakbera@gmail.com" style="text-decoration: none">Contact</a></h5>
                 <h2 class="mast__title"><a href="mailto:rounakbera@gmail.com" id="mail"><i class="fas fa-envelope" style="color: white;"></i></a></h2>
@@ -52,7 +50,7 @@
                 </div>
             </header>
             <div style="text-align: center; z-index: 9999">
-                <h5 class="mast__pretitle" style="position: absolute; top: 90%; margin-left: auto; font-size: 1em">Designed by Rounak Bera using code from <a style="color: white" href="https://codepen.io/StephenScaff/">Stephen Scaff</a></h5>
+                <h5 class="mast__pretitle" style="position: absolute; top: 90%; margin-left: auto; font-size: 1em">Designed by Rounak Bera</h5>
             </div>
         </section>
     </main>
